--- a/index.css
+++ b/index.css
@@ -312,8 +312,8 @@ body::after{
 
 @media (max-width: 450px){
     .container .card{
-        width: 300px;
-        height: 500px;
+        width: 350px;
+        height:600px;
         margin: 30px;
         box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
         border-radius: 15px;
@@ -327,39 +327,40 @@ body::after{
     }
 
     .container .card .content h1{
-        margin-left: 4em;
+        margin-left: 2.5em;
         margin-top: 8em;
-        font-size: 1.5em;
+        font-size: 2em;
         color: rgba(255, 255, 255, 0.658);
         pointer-events: none;
     }
     
     .container .card .content h2{
-        margin-left: 4.5em;
+        margin-left: 3em;
         margin-top: 5px;
-        font-size: 1.2em;
+        font-size: 1.5em;
         color: rgba(255, 255, 255, 0.5);
         pointer-events: none;
     }
     
     .container .card .content .logo{
         margin-top: 3em;
-        margin-left: -80px;
+        margin-left: -110px;
         pointer-events: none;
-        width: 50%;
-        height: 30%;
+        width: 60%;
+        height: 40%;
     }
     
     .container .card .content .artist{
-        font-size: 1em;
+        font-size: 1.2em;
         color: rgba(255, 255, 255, 0.596);
         margin-left: -12px;
-        margin-top: 12.5em;
+        margin-top: 15.5em;
     }
     
     .container .card .content p{
-        margin-left: 4em;
-        margin-right: 4em;
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 15px;
     }
     
     .container .card .content a{
